@@ -1,5 +1,7 @@
 XXXX XXX XX  Sergey Satskiy <sergey.satskiy@gmail.com>
 
+* Bug fix: F3/Shift F3 now work for the find/replace search string depending of
+  what dialog was shown last. Issue #289.
 * Updating the help screen. Issue #281.
 * Updating the welcome screen. Issue #279.
 * Making Shift+Home/End select till the beginning/end of a visible line.
